--- a/src/components/Todo/Panel/Panel.css
+++ b/src/components/Todo/Panel/Panel.css
@@ -7,6 +7,12 @@
   margin: 10px;
   flex: 1 1 auto;
   align-self: auto; }
+  .Panel__DropTarget {
+    background: rgba(0, 0, 0, 0.2);
+    border-radius: 3px;
+    min-height: 32px;
+    padding: 6px;
+    margin: 0px 8px 5px; }
   .Panel__AddCard {
     padding: 8px 10px;
     cursor: pointer; }
@@ -15,7 +21,13 @@
       text-decoration: underline; }
   .Panel__Header {
     padding: 8px 10px;
-    font-weight: bold; }
+    font-weight: bold;
+    line-height: 24px; }
+    .Panel__Header input {
+      width: 100%;
+      padding: 0px 5px;
+      border: 1px solid rgba(0, 0, 0, 0.5);
+      border-radius: 5px; }
   .Panel__CardEdit {
     padding: 0px 8px;
     padding-bottom: 8px; }
