--- a/src/components/Todo/Todo.scss
+++ b/src/components/Todo/Todo.scss
@@ -8,4 +8,20 @@
   align-content: flex-start;
   align-items: flex-start;
   overflow: auto;
+  &__Creator {
+    background: rgba(0,0,0,0.12);
+    padding: 12px;
+    color: #fff;
+    box-shadow: 2px 2px 5px rgba(0,0,0, 0.3);
+    border-radius: 3px;
+    max-width: 270px;
+    min-width: 270px;
+    margin: 10px;
+    flex: 1 1 auto;
+    align-self: auto;
+    cursor: pointer;
+    &:hover {
+      background: rgba(0,0,0,0.3);
+    }
+  }
 }
