--- a/src/components/Todo/Panel/Card/Card.css
+++ b/src/components/Todo/Panel/Card/Card.css
@@ -1,9 +1,19 @@
 .Card {
-  background: white;
-  border-radius: 3px;
-  border-bottom: 1px solid #ccc;
-  padding: 6px;
-  margin: 0px 8px 5px;
-  cursor: pointer; }
-  .Card:hover {
-    background: #edeff0; }
+  margin: 0px 8px 5px; }
+  .Card__Content {
+    background: white;
+    border-radius: 3px;
+    border-bottom: 1px solid #ccc;
+    padding: 6px;
+    cursor: pointer; }
+    .Card__Content:hover {
+      background: #edeff0; }
+  .Card.isOver::before {
+    content: '';
+    display: block;
+    background: rgba(0, 0, 0, 0.2);
+    border-radius: 3px;
+    width: 100%;
+    min-height: 32px;
+    padding: 6px;
+    margin: 0px 0px 5px; }
