--- a/src/components/Todo/Panel/Card/Card.scss
+++ b/src/components/Todo/Panel/Card/Card.scss
@@ -1,11 +1,27 @@
 .Card {
-  background: white;
-  border-radius: 3px;
-  border-bottom: 1px solid #ccc;
-  padding: 6px;
   margin: 0px 8px 5px;
-  cursor: pointer;
-  &:hover {
-    background: #edeff0;
+  &__Content {
+    background: white;
+    border-radius: 3px;
+    border-bottom: 1px solid #ccc;
+    padding: 6px;
+
+    cursor: pointer;
+    &:hover {
+      background: #edeff0;
+    }
+  }
+
+  &.isOver {
+    &::before {
+      content: '';
+      display: block;
+      background: rgba(0,0,0,0.2);
+      border-radius: 3px;
+      width: 100%;
+      min-height: 32px;
+      padding: 6px;
+      margin: 0px 0px 5px;
+    }
   }
 }
