--- a/src/components/Todo/Panel/Panel.scss
+++ b/src/components/Todo/Panel/Panel.scss
@@ -36,6 +36,14 @@
   &__CardEdit {
     padding: 0px 8px;
     padding-bottom: 8px;
+    &_cancel{
+      border: none;
+      background: transparent;
+      &:hover {
+        background: transparent;
+        color: rgba(0,0,0,0.6);
+      }
+    }
     &_text {
       background: white;
       border-radius: 3px;
